[workspace]
members = [
    "arch/cortex-m",
    "arch/cortex-m0",
    "arch/cortex-m0p",
    "arch/cortex-m3",
    "arch/cortex-m4",
    "arch/cortex-m7",
    "arch/riscv",
    "arch/rv32i",
    "boards/imix",
    "capsules/core",
    "capsules/extra",
    "chips/sam4l",
    "kernel",
    "libraries/enum_primitive",
    "libraries/riscv-csr",
    "libraries/tock-cells",
    "libraries/tock-register-interface",
    "libraries/tickv",
]
exclude = ["tools/"]

[workspace.package]
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2021"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1
