[workspace]
members = [
    "arch/cortex-m",
    "arch/cortex-m4",
    "arch/riscv",
    "boards/imix",
    "capsules/core",
    "capsules/extra",
    "chips/sam4l",
    "kernel",
    "libraries/enum_primitive",
    "libraries/riscv-csr",
    "libraries/tock-cells",
    "libraries/tock-register-interface",
    "libraries/tickv",
]
exclude = ["tools/"]

[workspace.package]
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2021"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1
